  * scale dialogs according to current text font size, i.e. adapt to DPI scaling

2019-09-03 Version 0.50.1
  * msbuild: fix parallel build in VS 2019 16.1
  * msbuild: fix building right after full installation
  * bugzilla 20003: project properties: show "Better C" in option text
  * bugzilla 20004: add button to reset all global settings to their default
  * bugzilla 20005: try to detect VC through ISetupConfiguration, too
  * mago: improve function call in watch window
    - implement virtual functions, fix calling delegates and function pointers
    - display of delegate type
    - support arbitrary return types
    - fix showing UTF32 values (supported by dmd 2.089)
    - fix reading enum values (not emitted before dmd 2.089)
  * VC project: release configurations in new projects now default to -release -O -inline
  * VC project: Compile and Compile/Run/Debug/Disassemble didn't use all command line options,
    Run/Debug now use "dmd -i" instead of "rdmd"
  * version highlighting for source files not in a project now reads settings from startup project
  * highlight x64 registers in asm block
  * don't highlight asm keywords/mnemonics/registers from semantic information
  * VS 2019 16.2: command line options no longer read correctly from the VC project for
    Compile and Run/Debug/Disassemble, dbuild refactored to not rely on msbuild DLLs for that

unreleased Version 0.51.0
  * Ctrl+Click goto definition added for VS2017+
  * experimental: semantic server built from dmd frontend
  * VS2017+: syntax highlighted tool tips
  * mago:
    - new option "hide reference pointers"
	- new option: "remove leading zeroes from hex values"
	- fix crash expanding pointer to empty dynamic array
	- large arrays: show growing index, fix omitting last element
  * dparser: now creates server process per Visual Studio Instance
  * added option to not show error squiggles and markers
  * added tooltip to collapsed region
  * fix function signature tool tips