@@ -291,6 +291,14 @@
           <ButtonText>DUB Upgrade</ButtonText>
         </Strings>
       </Button>
+      <Button guid="g_commandSetCLSID" id="CmdDubRefresh" priority="0x0100" type="Button">
+        <Icon guid="guidImageList" id="bmpidPackage"/>
+        <CommandFlag>DynamicVisibility</CommandFlag>
+        <CommandFlag>DefaultInvisible</CommandFlag>
+        <Strings>
+          <ButtonText>DUB Refresh</ButtonText>
+        </Strings>
+      </Button>
 
       <!--
         <Button guid="g_commandSetCLSID" id="id01" priority="0" type="Button"> <Parent guid="g_commandSetCLSID" id="IDG_TESTBMP"/> <Icon guid="guidVsShellIcons" id="151"/> <Strings><ButtonText>Bmp 151</ButtonText></Strings> </Button>
