@@ -1492,7 +1492,7 @@ bool launchBatchProcess(string workdir, string cmdfile, string cmdline, IVsOutpu
 	return hr == S_OK && result == 0;
 }
 
-bool launchDubUpgrade(Config cfg)
+bool launchDubCommand(Config cfg, string command)
 {
 	IVsOutputWindowPane pane = getVisualDOutputPane();
 	if(!pane)
@@ -1501,11 +1501,14 @@ bool launchDubUpgrade(Config cfg)
 
 	string workdir = normalizeDir(cfg.GetProjectDir());
 	string precmd = cfg.getEnvironmentChanges();
-	string cmd = precmd ~ cfg.getDubCommandLine("upgrade", false) ~ "\n";
-	cmd = cmd ~ "\nif %errorlevel% neq 0 echo Upgrading failed!\n";
-	cmd = cmd ~ "\nif %errorlevel% == 0 echo Upgrading done.\n";
+	string cmd = precmd ~ cfg.getDubCommandLine(command, false) ~ "\n";
+	cmd = cmd ~ "\nif %errorlevel% neq 0 echo dub " ~ command ~ " failed!\n";
+	cmd = cmd ~ "\nif %errorlevel% == 0 echo dub " ~ command ~ " done.\n";
 
-	string cmdfile = makeFilenameAbsolute(stripExtension(cfg.GetCommandLinePath(false)) ~ ".upgrade.cmd", workdir);
+	string cmdfile = makeFilenameAbsolute(stripExtension(cfg.GetCommandLinePath(false)) ~ "." ~ command ~ ".cmd", workdir);
+	mkdirRecurse(dirName(cmdfile));
+
+	cmd = cfg.GetProjectOptions().replaceEnvironment(cmd, cfg);
 
 	pane.Activate();
 	return launchBatchProcess(workdir, cmdfile, cmd, pane);
@@ -1513,5 +1516,9 @@ bool launchDubUpgrade(Config cfg)
 
 bool refreshDubProject(Project prj)
 {
-	return false;
+	Config cfg = GetActiveConfig(prj);
+	if (!cfg)
+		return false;
+
+	return launchDubCommand(cfg, "generate");
 }
