@@ -1188,3 +1188,5 @@ unreleased Version 0.51.0
   * added option to not show error squiggles and markers
   * added tooltip to collapsed region
   * fix function signature tool tips
+  * error list now filled with intellisense errors
+  * basic DUB support: update and refresh if project contains dub.json or dub.sdl
